# member-manager

./: CMakeLists.txt  README  TODO  Utils.cmake  config.h.in  copyDataFromOldSchemaToNew.sql  doxyfile.in  postgresql-schema.sql  resources.qrc  sqlite-schema.sql  testdaten.sql
dorfverwaltung/: CMakeLists.txt  Makefile.am  configure.ac
dorfverwaltung/databases/: dorfmanagement.cpp  dorfmanagement.hpp  dorfverw-databases-old.xml  dorfverw-databases.xml
dorfverwaltung/src/: Balance.cpp  Balance.hpp  Bank.cpp  Bank.hpp  CMakeLists.txt  ClubMember.cpp  ClubMember.hpp  Contribution.cpp  Contribution.hpp  EMail.cpp  EMail.hpp  EMailException.cpp  EMailException.hpp  Makefile.am  Member.cpp  Member.hpp  Ressourcen.cpp  Ressourcen.hpp  VillageSquare.cpp  VillageSquare.hpp  club-member.cpp  club-member.hpp  dorfmanagement.cpp  dorfmanagement.hpp  dorfmanagementAddons.cpp  dorfmanagementAddons.hpp  e-mail.cpp  e-mail.hpp  main.cc
dorfverwaltung/src-test/: Makefile.am  club-member-test.cpp  club-member-test.hpp  foo-bar-test.cpp  foo-bar-test.hpp  testrunnerMain.cxx
dorfverwaltung/src-ut/: club-member-test.cpp  email-test.cpp  main.cpp
dorfverwaltung/src-utf/: BalanceTest.cpp  BankTest.cpp  CMakeLists.txt  ClubMemberTest.cpp  ContributionTest.cpp  EMailExceptionTest.cpp  EMailTest.cpp  MemberTest.cpp  RessourcenTest.cpp  TestFixture.cpp  TestFixture.hpp  UnitTestMain.cpp  VillageSquareTest.cpp
gui-Qt/src/: CMakeLists.txt  CashSumSummary.cpp  CashSumSummary.h  Config.h.in  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  ContributionDialog.cpp  ContributionDialog.h  ContributionDialog.ui  ContributionModel.cpp  ContributionModel.h  CountMemberSummary.cpp  DatabaseStructure.cpp  DatabaseStructure.h  DebitSumSummary.cpp  DebitSumSummary.h  Dorfverwaltung-GUI-Qt.pro  KassaModel.cpp  KassaModel.h  MainWindow.cpp  MainWindow.h  Member.cpp  Member.h  MemberDetailModel.cpp  MemberDetailModel.h  MemberDialog.cpp  MemberDialog.h  MemberFilter.cpp  MemberFilter.h  MemberModel.cpp  MemberModel.h  SaldoDialog.cpp  SaldoDialog.h  SaldoDialog.ui  SaldoModel.cpp  SaldoModel.h  SaldoSumDialog.cpp  SaldoSumDialog.h  SaldoSumDialog.ui  (+18 more)
gui-Qt/test/: CMakeLists.txt  CashSumSummaryTest.cpp  CashSumSummaryTest.h  ConnectionDialogTest.cpp  ConnectionDialogTest.h  ContributionDialogTest.cpp  ContributionDialogTest.h  ContributionModelTest.cpp  ContributionModelTest.h  CountMemberSummaryTest.cpp  CountMemberSummaryTest.h  DatabaseUtils.cpp  DatabaseUtils.h  DebitSumSummaryTest.cpp  DebitSumSummaryTest.h  DialogButtonBoxHandler.cpp  Dorfverwaltung-GUI-Qt-Test.pro  Executor.h  KassaModelTest.cpp  KassaModelTest.h  MainWindowTest.cpp  MainWindowTest.h  MemberDetailModelTest.cpp  MemberDetailModelTest.h  MemberDialogTest.cpp  MemberDialogTest.h  MemberFilterTest.cpp  MemberFilterTest.h  MemberModelTest.cpp  MemberModelTest.h  MemberTest.cpp  MemberTest.h  ReadSqlFile.h  SaldoDialogTest.cpp  SaldoDialogTest.h  SaldoModelTest.cpp  SaldoModelTest.h  SaldoSumDialogTest.cpp  SaldoSumDialogTest.h  SaldoSumModelTest.cpp  (+24 more)
src/: CMakeLists.txt  CashSumSummary.cpp  CashSumSummary.h  ConnectionDialog.cpp  ContributionDialog.cpp  ContributionDialog.h  CountMemberSummary.cpp  CountMemberSummary.h  DatabaseStructure.cpp  DebitSumSummary.cpp  DebitSumSummary.h  Member.cpp  Member.h  MemberDetailModel.cpp  MemberDialog.cpp  MemberDialog.h  MemberFilter.cpp  MemberModel.h  SaldoDialog.cpp  SaldoDialog.ui  SaldoModel.cpp  SaldoSumModel.h  SummaryHandler.cpp  SummaryHandler.h  SummaryWindow.cpp  SummaryWindow.h  SummaryWindow.ui  cashsumsummary.cpp  cashsumsummary.h  contributionreceipt.cpp  contributionreceipt.h  countmembersummary.cpp  countmembersummary.h  databasemanager.cpp  databasemanager.h  debitsumsummary.cpp  debitsumsummary.h  main.cpp  managerengine.cpp  managerengine.h  (+9 more)
src/Gui/: ConnectionDialog.cpp  ConnectionDialog.h  ContributionDialog.cpp  ContributionDialog.h  MainWindow.cpp  MainWindow.h  MemberDialog.cpp  MemberDialog.h  MemberMapper.cpp  MemberMapper.h  SaldoDialog.cpp  SaldoDialog.h  SaldoSumDialog.cpp  SaldoSumDialog.h  SummaryWindow.cpp  SummaryWindow.h  mainWindow.ui
src/Model/: ContributionModel.cpp  ContributionModel.h  DatabaseStructure.cpp  DatabaseStructure.h  KassaModel.cpp  KassaModel.h  Member.cpp  Member.h  MemberDao.cpp  MemberDao.h  MemberDetailModel.cpp  MemberDetailModel.h  MemberFilter.cpp  MemberFilter.h  MemberModel.cpp  MemberModel.h  SaldoModel.cpp  SaldoModel.h  SaldoSumModel.cpp  SaldoSumModel.h  TableDao.cpp  TableDao.h
src/accounting/: accountingdatacreator.cpp  accountingdatacreator.h  accountingentryimportermain.cpp  accountingentryimportermain.h  accounttransaction.cpp  accounttransaction.h  arithmetic.cpp  arithmetic.h  balanceentry.cpp  balanceentry.h  balancepersister.cpp  balancepersister.h  cashimporter.cpp  cashimporter.h  contributionentry.cpp  contributionentry.h  contributionreceiptparser.cpp  contributionreceiptparser.h  memberaccountingdata.cpp  memberaccountingdata.h  memberadditionalsum.cpp  memberadditionalsum.h  memberdebt.cpp  memberdebt.h  memberdonationsum.cpp  memberdonationsum.h  memberfeesum.cpp  memberfeesum.h  pay.cpp  pay.h  (+8 more)
test/: CMakeLists.txt  CashSumSummaryTest.cpp  CashSumSummaryTest.h  ConnectionDialogTest.h  ContributionDialogTest.h  ContributionModelTest.h  CountMemberSummaryTest.cpp  CountMemberSummaryTest.h  DebitSumSummaryTest.cpp  DebitSumSummaryTest.h  DialogButtonBoxHandler.h  MainWindowTest.cpp  MainWindowTest.h  MemberDetailModelTest.h  MemberDialogTest.cpp  MemberFilterTest.cpp  MemberModelTest.cpp  MemberTest.cpp  MemberTest.h  ReadSqlFile.cpp  SaldoDialogTest.cpp  SaldoSumDialogTest.h  SaldoSumModelTest.cpp  SummaryWindowTest.cpp  cashsumsummarytest.cpp  cashsumsummarytest.h  contributionreceipttest.cpp  contributionreceipttest.h  countmembersummarytest.cpp  countmembersummarytest.h  databasemanagertest.cpp  debitsumsummarytest.cpp  debitsumsummarytest.h  managerenginetest.cpp  membercontributiontest.cpp  membercontributiontest.h  memberfactorytest.cpp  memberfactorytest.h  membertest.cpp  membertest.h
(+315 files in other folders)
